[package]
name = "libboxer"
version = "0.3.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2021"

[dependencies]
boxer = { path = "../boxer" }
crossbeam = "0.8"

[lib]
name = "Boxer"
crate-type = ["cdylib"]
path = "lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3